cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
add_executable(gtests "")
target_sources(gtests
  PRIVATE
    common/instance_helper_test.cpp
    common/list_node_test.cpp
    common/list_test.cpp
    common/spy_runtime_error.c
    infrastructures/drivers/led_driver_test.cpp
    infrastructures/drivers/micro_time_test.cpp
    infrastructures/drivers/mock_io_data.cpp
    infrastructures/drivers/mock_io_data_test.cpp
    infrastructures/drivers/ssd_driver_test.cpp
    infrastructures/frameworks/sif_file_test.cpp
    infrastructures/frameworks/sif_file_validator_test.cpp
    services/modular_sum_test.cpp
    services/sjis_code_converter_test.cpp
)
target_include_directories(gtests
  PUBLIC
    ${CMAKE_CURRENT_LIST_DIR}
)
target_link_libraries(gtests
  gtest_main
  surfes_utility
)
add_test(
  NAME
    surfes_utility_test
  COMMAND
    ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/gtests
)
